Fix the z-index for config forms list item menus.
When an item has a menu popup, the z-index was wrong, sometimes letting
other elements on the page overlap it. This fixes it to use the menu
layer.

Testing Done:
Verified that other controls no longer showed above the popup menu.

Reviewed at https://reviews.reviewboard.org/r/13984/

--- a/djblets/static/djblets/css/config-forms.less
+++ b/djblets/static/djblets/css/config-forms.less
@@ -1096,6 +1096,7 @@ table.djblets-c-config-forms-list {
   background: var(--ink-c-menu-bg);
   border: var(--ink-c-menu-border);
   color: var(--ink-c-menu-fg);
+  z-index: var(--ink-z-menu);
 }
 
 
